--- a/CSS/about.css
+++ b/CSS/about.css
@@ -37,7 +37,9 @@ article {
 }
 .content p {
     margin: 0;
-    font-size: 23px;
+    font-size: 30px;
+    text-align: justify;
+    font-family: var(--times);
 }
 .content h2 {
     text-align: center;
@@ -48,7 +50,7 @@ article {
     font-weight: 700;
 }
 .visionContent p {
-    font-size: 27.5px;
+    font-size: 35px;
 }
 .a2 {
     height: auto;
@@ -63,7 +65,7 @@ article {
 .coreValuesmainContainer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
-    max-width: 80%; /* Ensures at most 3 columns (3 * 300px max) */
+    max-width: 100%; /* Ensures at most 3 columns (3 * 300px max) */
     margin: auto; /* Centers the container */
     row-gap: 130px;
     position: relative;
@@ -88,14 +90,18 @@ article {
 }
 .corevalues p {
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
+    
+    font-family: var(--times);
+}
+.long p{
+    font-size: 26px;
 }
 .headerfoot {
     position: absolute;
     z-index: 2;
     height: 100%;
-    width: 150%;
-    margin-left: -20%;
+    width: 100%;
 }
 .corevaluesheader {
     
@@ -118,7 +124,7 @@ article {
 .h2p {
     width: 250px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1100px) {
     body {
         overflow-x: hidden;
     }
@@ -136,11 +142,11 @@ article {
         height: auto;
         width: 100vw;
         max-width: 100vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        display: grid;
         row-gap: 20px;
         padding-inline: 20px;
+        grid-template-columns: none;
+        grid-template-rows: 1fr 100px 1fr;
     }
     .rollimg {
         display: none;
@@ -151,15 +157,37 @@ article {
     }
     .content {
         width: 100%;
-        min-height: 500px;
-        height: auto;
+        height: 100%;
     }
-    .mv {
-        width: 100%;
+    .content p {
+        font-size: 4vw;
+    }
+    .visionContent p {
+        font-size: 5vw;
     }
     .coreValuesmainContainer {
         display: flex;
         flex-wrap: wrap;
         margin: 0;
+    }
+
+
+    .headerfoot {
+        display: none;
+    }
+    .a2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .coreValuesmainContainer {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+    }
+    .h2p p {
+        font-size: 1.6rem;
     }
 }
